# attracts_bridge

./: CMakeLists.txt  package.xml
include/attracts_bridge/: stm32_bridge_node.hpp  transceiver_module_bridge_node.hpp
launch/: stm32_bridge.launch.py  transceiver_module_bridge.launch.py
src/: stm32_bridge_node.cpp  transceiver_module_bridge_node.cpp
